apps/production/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http
  namespace: immich
  labels:
    app: immich
spec:
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  hostnames:
    - "photos.burntbytes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-https
  namespace: immich
  labels:
    app: immich
spec:
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  hostnames:
    - "photos.burntbytes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
